--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="pl-KBSS6xcsN3sI3mZhaftzO6rYJlJAbY6kd2eeM1aw" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Learn how to fix Honda GPS Update issues with this detailed guide. Get solutions to resolve Honda GPS Update problems easily."/>
   <meta name="keywords" content="Honda GPS Update, Fix Honda GPS, Honda GPS troubleshooting, Honda navigation update fix"/>
